# chartdb-py

./: .gitignore  CLAUDE.md  README.md  aditya-chartdb.py  pyproject.toml
chartdb/: __init__.py  __main__.py  db.py  gui.py  properties.py  vectors.py
scripts/: build-readme.md  build-sample-db.py  build.py
