[project]
name = "chartdb"
version = "0.1.0"
description = "Chart database with vector similarity search for vedic astrology"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "numpy>=2.0",
    "pyside6>=6.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
libaditya = { path = "../libaditya", editable = true }

[dependency-groups]
dev = [
    "libaditya",
]
